# Reviewer

./: .gitignore  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  review  runtools.sh
.claude/skills/sqa-triage/: SKILL.md  triage-guidelines.md
.github/workflows/: ci.yml
.sqa-agent/: config.toml  file_status.json
.sqa-agent/prompts/: general_review_prompts.md
src/sqa_agent/: agent.py  agent_common.py  agent_resolve.py  agent_review.py  cli.py  config.py  file_status.py  findings.py  git_ops.py  prompts.py  tools.py  ui.py
src/sqa_agent/prompts/: file_review_prompts.md  general_review_prompts.md
tests/: test_agent.py  test_cli.py  test_config.py  test_findings.py  test_resolve.py  test_tools.py  test_ui.py
